--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </nav>
     <div class=".container-fluid" style="background-color: black; height: 350; ">
         <div style="background-color: green; height: 5px; border-end-end-radius: 400px;"></div>
-        <h1 style="color:greenyellow; padding-top: 5vh; text-align: center;width: 80%;">'''</h1>
-        <h1 style="color:green; padding-top: 5vh; text-align: center;">Home Page</h1>
-        <h1 style="color:greenyellow; padding-top: 5vh; text-align: center; margin-left: 30%;">'''</h1>
+        <h1 id= "asp1" style="color:greenyellow; padding-top: 5vh; text-align: center;width: 80%;">'''</h1>
+        <h1 id= "asp2" style="color:green; padding-top: 5vh; text-align: center;">Home Page</h1>
+        <h1 id= "asp3" style="color:greenyellow; padding-top: 5vh; text-align: center; margin-left: 30%;">'''</h1>
     </div>
     <div class=".container">
         <div class="row" style="margin-left: 10%; margin-right: 10%; margin-top: 1%; ">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </div>
-            
+
 
 
         </div>
@@ -98,6 +98,20 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+
+    <script>
+        var t1 = document.getElementById('asp1');
+        var t2 = document.getElementById('asp2');
+        var t3 = document.getElementById('asp3');
+
+        gsap.from(t1,{x: -1000,y: -1000,duration: 1});
+        gsap.from(t2,{x: 1000,y: 1000,duration: 1, delay:0.5});
+        gsap.from(t3,{x: 1000,y: 1000,duration: 1, delay:0.10});
+
+        gsap.from(".card",{opacity: 0, duration: 8});
+    
+    </script>
 
 </body>
 
