--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class=".container-fluid" style="background-color: black; height: 350; ">
         <div style="background-color: green; height: 5px; border-end-end-radius: 400px;"></div>
         <h1 id="asp1" style="color:greenyellow;padding-top: 5vh; text-align: center; width: 80%;">'''</h1>
-        <h1 style="color:green; padding-top: 5vh; text-align: center;"><span style=" padding-top: 5vh; text-align:center;"><span style="color:green;" >wesbdss@wesbdss@github.com</span><span style="color: white;">:</span><span style="color: blue;">bin/home/homework/</span><span style="color: white;">$ </span></span><span id="asp2" > _</span></h1>
+        <h1 style="color:green; padding-top: 5vh; text-align: center;"><span style=" padding-top: 5vh; text-align:center;"><span style="color:green;" >wesbdss@github.com</span><span style="color: white;">:</span><span style="color: blue;">bin/home/homework/</span><span style="color: white;">$ </span></span><span id="asp2" > _</span></h1>
         <h1 id="asp3" style="color:greenyellow; padding-top: 5vh; text-align: center; margin-left: 30%;">'''</h1>
     </div>
     <div class=".container">
