--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <hr>
                 </div>
                 <div class="col-md-12"> <strong>Endereço:</strong><br> Catalão - GO</div>
-                <div class="col-md-12"> <strong>Telefone:</strong><br> +55 (61) 991188735</div>
+                <div class="col-md-12"> <strong>Telefone:</strong><br> Indisponível temporariamente</div>
                 <div class="col-md-12"> <strong>Email:</strong><br>wesleybenicio4@gmail.com</div>
                 <div class="col-md-12" style="padding-top: 10%;">
                     <strong style="font-size: 2vw;">Proficiências</strong>
