--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                 </div>
                 <div class="col-md-12">
                     <ul>
-                        <li>Inglês <span style="font-family: monster_friend_backregular; color: crimson;">**</span><span
-                                style="font-family: monster_friend_backregular; ">*</spam></span></li>
+                        <li>Inglês <span style="font-family: monster_friend_backregular; color: crimson;">*</span><span
+                                style="font-family: monster_friend_backregular; ">**</spam></span></li>
                         <li>Espanhol <span
-                                style="font-family: monster_friend_backregular; color: crimson;">**</span><span
-                                style="font-family: monster_friend_backregular; ">*</spam>
+                                style="font-family: monster_friend_backregular; color: crimson;">*</span><span
+                                style="font-family: monster_friend_backregular; ">**</spam>
                         </li>
                     </ul>
                 </div>
